--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,8 +26,8 @@
   <div class="logocont"><img class="logo" src="/logo.png" alt=""></div>
   <div class="cont">
     <div>
-  <div class="row">
-    <div class="chartDiv" id="chartDiv1"></div>
+  <div class="row" style="margin-bottom: 30px;">
+      <div class="chartDiv" id="chartDiv1"></div>
     <div class="chartDiv" id="chartDiv2"></div>
     <div class="chartDiv" id="chartDiv3"></div>
   </div>
@@ -171,6 +171,10 @@
     function createGaugeChart(chartDivId, index) {
       var chart = JSC.chart(chartDivId, {
         debug: true,
+        title: {
+            label_text: "Temperature Sensor " + (index + 1) + "‎ ‎ ",
+            position: 'center'
+          }, // Add this line to set the title
         type: 'gauge',
         width: '100%',
         height: 250,
@@ -264,6 +268,10 @@
     function createGaugeChart2(chartDivId, index) {
         var chart = JSC.chart(chartDivId, {
         debug: true,
+        title: {
+            label_text: "Humidity Sensor " + (index + 1) + "‎ ‎ ",
+            position: 'center'
+          }, 
         type: 'gauge',
         width: '100%',
         height: 250,
